# takt

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
src/: error.rs  log.rs  main.rs  model.rs  report.rs  tags.rs
src/server/: mod.rs
src/store/: flat.rs  mod.rs  sqlite.rs
