[package]
name = "takt"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Martin Kronberger <kronberger@proton.me>"]
description = "Time tracking CLI with hierarchical tags and human-readable storage."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kronberger-droid/takt"
homepage = "https://github.com/kronberger-droid/takt"
keywords = ["time-tracking", "cli", "productivity", "timer"]
categories = ["command-line-utilities"]

[[bin]]
name = "takt"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = [ "derive" ] }
dirs = "6.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.12"
